--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>UNES - Página Inicial</title>
 </head>
 
-<body background="imagens/fundo.png">
+<body background="projeto/imagens/fundo.png">
     <table width="900" align="center">
         <tr>
-            <td height="89"><img src="imagens/logo.png" alt="logo"></td>
+            <td height="89"><img src="projeto/imagens/logo.png" alt="logo"></td>
             <td align="right"> 
                 <a href="">Home</a>  |  
                 <a href="quem-somos.html">Quem Somos</a>  |  
@@ -18,7 +18,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <img src="imagens/capa.png" alt="capa">
+                <img src="projeto/imagens/capa.png" alt="capa">
             </td>
         </tr>
         <tr>
